--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://VedKadam.github.io/calculator-reactjs",
+  "homepage": "https://VedKadam.github.io/Calculator-reactjs",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
